app/assets/stylesheets/modules/spotlight_overrides.scss
#header-navbar {
  a {
    &:hover,
    &:focus,
    &:active {
      text-decoration: underline;
    }
  }
}

.dd-list {
  .panel-default {
    > .panel-heading {
      background-color: $gray-200;
    }
  }
}

.panel-default {
  .page {
    background-color: $gray-200;
  }
}

// Increase font size because we're using Source Sans in this app
// and Source Sans is noticeably smaller than the default font.
.image-masthead .navbar ul.nav.navbar-nav > li a {
  font-size: 15px;
}

.browse-landing .text-overlay .browse-category-title {
  font-size: 26px;

  @media screen and (min-width: 992px) and (max-width: 1199px) {
    font-size: 22px;
  }

  @media screen and (min-width: 768px) and (max-width: 991px) {
    font-size: 19px;
  }
}

// Reduce size of page titles
.empty-page-block h2 {
  @extend .h3;
}

.page-title,

.page-header {
  @extend .h2;
  color: $heading-font-color;

  small {
    font-size: 24px;
  }
}

// Ajustments to sidebars to use SUL color palette, more compact vertical spacing
#sidebar li {
  margin-top: 0;
}

#sidebar h4 {
  @include heading-with-border();
  font-size: 20px;

  &.nav-heading {
    margin-left: 0;
    padding-left: 3px;
    padding-top: 0;
  }
}

#sidebar ul.nav > li a {
  padding: 3px $padding-base-horizontal 3px 3px;

  .blacklight-about_pages-show & { // accommodate likely occurrence of multi-line items
    padding-bottom: 4px;
    padding-top: 4px;
  }
}

.sidenav .active > a {
  @include sidebar-link-active();
}

// Sidebar adjustments for feature pages.
// Links here are constructed using h4s and nested ol items so styling
// needs to be different than other sidebar links.
#sidebar ol.sidenav {
  > li > h4 { // parent pages
    border-bottom: 0;
    color: $sidebar-link-color;
    font-size: 15px;
    font-weight: 600;
    line-height: 1.2;
    margin-bottom: 3px;
    margin-top: $padding-base-vertical * 4;

    > a {
      color: $color-dark-red;

      &:hover,
      &:focus {
        background-color: $sidebar-link-background-color;
      }
    }
  }

  li:first-child > h4 {
    margin-top: $padding-large-vertical * 3;
  }

  ol.subsection li { // child pages
    list-style-type: none;
    margin-left: 0;
    padding-bottom: 3px;
    padding-left: 3px;
    padding-top: 3px;

    &.active {
      @include sidebar-link-active();
    }

    > a:hover,
    > a:focus {
      background-color: $sidebar-link-background-color;
    }
  }
}

.search-btn {
  &:hover,
  &:active,
  &:focus,
  &:active:focus {
    background-color: $color-beige-30;
    border-color: $color-beige;
  }
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  background-color: $sidebar-link-background-color;
}

#sidebar ol.sidenav li a:hover,
#sidebar ol.sidenav li a:focus {
  background-color: $sidebar-link-background-color;
}

.blacklight-about_pages-show #sidebar {
  margin-top: $padding-large-vertical * 2;
}

// Use SUL colors for facet sidebar
.facets > .top-panel-heading {
  padding-top: 0;
}

.panel-default {
  border-color: $color-beige-30;

  > .panel-heading {
    background-color: $color-beige-10;
  }

  &.facet_limit-active {
    border-color: $color-beige-40;

    > .panel-heading {
      background-color: $color-beige-40;
      color: $color-blackish;
    }
  }

  .facet-values li .selected {
    color: $color-blackish;
  }
}

.callout-danger .btn-default {
  @extend .btn-danger;
}

.st__content-block--image {
  text-align: center;

  img {
    @include thumbnail-image-border;
  }
}

.thumbnail > img,
.thumbnail > a > img {
  @include thumbnail-image-border;
}

